--- a/PROYECTOAJAX/Ui/Login.html
+++ b/PROYECTOAJAX/Ui/Login.html
@@ -1,6 +1,6 @@
 <H1>LOGIN</H1>
-<form method="post">
+<form>
     <input type="text" placeholder="USUARIO" id="usu">
     <input type="password" placeholder="CONTRASEÑA" id="pw">
+    <input type="button" onclick="comunicarServer(1,guilogger,{'pw':document.getElementById('pw').value,'usu':document.getElementById('usu').value})">
 </form>
-<button onclick=""></button>
