--- a/PROYECTOAJAX/Ui/Select.html
+++ b/PROYECTOAJAX/Ui/Select.html
@@ -1,6 +1,1 @@
-<H1>LOGIN</H1>
-<form method="post">
-    <input type="text" placeholder="USUARIO" id="usu">
-    <input type="password" placeholder="CONTRASEÑA" id="pw">
-    <input type="submit">
-</form>
+<h1>SELECT</h1>
